[workspace]
members = [
	"chronicle",
	"node",
	"pallets/elections",
	"pallets/members",
	"pallets/networks",
	"pallets/shards",
	"pallets/tasks",
	"pallets/timegraph",
	"primitives",
	"runtime",
	"runtime/common",
	"tc-subxt",
	"tester",
	"tss",
]
resolver = "2"

[profile.release]
debug = true

[profile.release-codecov]
inherits = "release"
strip = false
