[workspace]
members = [
	"chronicle",
	"node",
	"pallets/elections",
	"pallets/members",
	"pallets/networks",
	"pallets/shards",
	"pallets/tasks",
	"pallets/timegraph",
	"primitives",
	"runtime",
	"runtime/common",
	"tc-subxt",
	"tester",
	"tss",
	"utils/generate-bags",
]
resolver = "2"

# Specifying a workspace dependency is similar to package dependencies except:
# - Dependencies from this table cannot be declared as optional
# - features declared in this table are additive with the features from [dependencies]
[workspace.dependencies]
rosetta-client = { git = "https://github.com/analog-labs/chain-connectors" }
rosetta-core = { git = "https://github.com/analog-labs/chain-connectors" }
rosetta-config-ethereum = { git = "https://github.com/analog-labs/chain-connectors" }
rosetta-docker = { git = "https://github.com/analog-labs/chain-connectors" }

[profile.release]
debug = true

[profile.release-codecov]
inherits = "release"
strip = false

[patch.crates-io]
ss58-registry = { git = 'https://github.com/Analog-Labs/ss58-registry.git' }
