[package]
name = "chronicle"
description = "Node operating the Analog GMP protocol"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
hex.workspace = true 

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

bincode = "1.3.3"
peernet = "0.3.0"
prometheus_exporter = { version = "0.8.5", default-features = false, features = ["logging"] }
schnorr-evm = { version = "0.1.0" }
sha3 = { version = "0.10" }
tracing-panic = "0.1.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

gmp-rust.workspace = true
tc-subxt.workspace = true
time-primitives = { workspace = true, default-features = true }
tss.workspace = true

[dev-dependencies]
env_logger.workspace = true
log-panics = "2.1.0"
lazy_static = "1.4.0"
surf = { version = "2.3.2", default-features = false, features = [ "h1-client-rustls" ] }

[features]
default = []
