[package]
name = "chronicle"
description = "Node operating the Analog GMP protocol"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
gmp.workspace = true
hex.workspace = true 
serde.workspace = true
serde_json = "1.0.128"
time-primitives = { workspace = true, default-features = true }
tc-subxt.workspace = true
tokio.workspace = true
tracing.workspace = true
tss.workspace = true
polkadot-sdk = { workspace = true, features = [
    "sp-runtime",
]}
scale-codec.workspace = true
bincode = "1.3.3"
bip39 = "2.0.0"
getrandom = "0.2.15"
peernet = "0.4.0"
prometheus_exporter = { version = "0.8.5", default-features = false, features = ["logging"] }
schnorr-evm = { version = "0.1.0" }
sha3 = { version = "0.10" }
tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }
tracing-panic = "0.1.1"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
ed25519-dalek = "2.1.1"
tempfile = "3.15.0"

[features]
testnet = [ "time-primitives/testnet", "tc-subxt/testnet" ]
develop = [ "time-primitives/develop", "tc-subxt/develop" ]
