[package]
name = "analog-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
timechain-node = { path = "../node" }

timechain-runtime = { path = "../runtime" }

pallet-elections = { path = "../pallets/elections" }
pallet-members = { path = "../pallets/members" }
pallet-networks = { path = "../pallets/networks" }
pallet-shards = { path = "../pallets/shards" }
pallet-tasks = { path = "../pallets/tasks" }
pallet-timegraph = { path = "../pallets/timegraph" }

chronicle = { path = "../chronicle" }
