[package]
name = "analog-docs"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
timechain-runtime.workspace = true

pallet-dmail.workspace = true
pallet-elections.workspace = true
pallet-members.workspace = true
pallet-networks.workspace = true
pallet-shards.workspace = true
pallet-tasks.workspace = true
pallet-timegraph.workspace = true

chronicle = { path = "../chronicle" }
