[package]
name = "e2e-tests"
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow.workspace = true
tc-cli= { path = "../tc-cli", features = ["testnet", "develop"] }
time-primitives = { workspace = true, features = ["testnet", "develop"] }
