[package]
name = "e2e-tests"
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow.workspace = true
futures.workspace = true
time-primitives = { workspace = true, features = ["testnet", "develop"] }
tc-cli= { path = "../tc-cli", features = ["testnet", "develop"] }
tracing.workspace = true
tracing-subscriber = "0.3.18"
hex.workspace = true
