[package]
name = "frameless"
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
parity-scale-codec = { version = "3.6.12", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
time-primitives = { path = "../primitives", default-features = false }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "sp-io/std",
  "sp-std/std",
  "time-primitives/std",
]
