[package]
name = "time-primitives"
description = "Substrate node low-level primitives."
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures = { workspace = true, optional = true }
log.workspace = true
serde = { workspace = true, features = [ "alloc" ] }
scale-codec.workspace = true
scale-decode.workspace = true
scale-info.workspace = true

alloy-primitives = { version = "0.6.4", default-features = false }
alloy-sol-types = { version = "0.6.4", default-features = false }
sha3 = { version = "0.10", default-features = false }

frame-support = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }
frame-system = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }
sp-api = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }
sp-application-crypto = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }
sp-core = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }
sp-io = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }
sp-runtime = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }
sp-std = { git = "https://github.com/analog-labs/polkadot-sdk", tag = "v1.15.1-anlog0", default-features = false }

polkadot-sdk = { workspace = true, features = [ "sp-core", "sp-runtime" ] }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"futures",

	"polkadot-sdk/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",

	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

[dev-dependencies]
hex.workspace = true

