[package]
name = "time-primitives"
description = "Substrate node low-level primitives."
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures = { workspace = true, optional = true }
log.workspace = true
serde = { workspace = true, features = [ "alloc" ] }
scale-codec.workspace = true
scale-decode.workspace = true
scale-info.workspace = true
sha3 = { version = "0.10", default-features = false }

polkadot-sdk = { workspace = true, features = [
	"frame-support",
    "frame-system",

    "sp-api",
    "sp-application-crypto",
    "sp-core",
    "sp-io",
    "sp-runtime",
    "sp-std",
]}

[features]
default = ["std"]
std = [
	"futures",
	"scale-codec/std",
	"scale-info/std",

	"polkadot-sdk/std",
]

[dev-dependencies]
hex.workspace = true

