[package]
name = "time-primitives"
description = "Substrate node low-level primitives."
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
serde = { workspace = true, features = [ "alloc" ] }
scale-codec.workspace = true
scale-info.workspace = true
schnorr-evm = { version = "0.1.0", default-features = false }
sha3 = { version = "0.10", default-features = false }
uint = { version = "0.10.0", default-features = false }

polkadot-sdk = { workspace = true, features = [
	"frame-support",
	"sp-api",
	"sp-core",
	"sp-io",
	"sp-runtime",
	"sp-std",
]}

[features]
default = [ "std" ]
testnet = []
develop = [ "testnet" ]
std = [
	"futures",
	"hex",
	"polkadot-sdk/std",
	"scale-codec/std",
	"scale-info/std",
	"schnorr-evm/std",
	"uint/std",
]
